<resources>
    <string name="app_name">FC BATE</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="matches">Matches</string>
    <string name="club_news">Club\'s News</string>
    <string name="socials">Socials</string>
    <string name="communicate">Communicate</string>
    <string name="nav_app">Application</string>
    <string name="nav_calendar">Calendar</string>
    <string name="nav_club">Club</string>
    <string name="nav_main">Home</string>
    <string name="nav_news">News</string>
    <string name="nav_table">Table</string>
    <string name="nav_team">Team</string>
    <string name="championship">Championship</string>
    <string name="no" translatable="false">№</string>
    <string name="games">G</string>
    <string name="diffs" translatable="false">+/-</string>
    <string name="points">P</string>
    <string name="team">Team</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="pager_title_news">NEWS</string>
    <string name="pager_title_press">PRESS</string>
    <string name="pager_title_declarations">DECLARATIONS</string>
    <string name="pager_title_players">PLAYERS</string>
    <string name="pager_title_trainers">TRAINERS</string>
    <string name="open_with">Open with</string>
    <string name="championship_str">Championship</string>
    <string name="feedback_txt">Feedback</string>
    <string name="rate_app_txt">Rate app</string>
    <string name="write_to_developers_txt">Write to developers</string>
    <string name="club_resources_txt">Club Resources</string>
    <string name="official_site_txt">Official site</string>
    <string name="official_forum_txt">Official forum</string>
    <string name="info_title_txt">Application FC BATE (Borisov)</string>
    <string name="email_subject">Question to developer</string>
    <string name="email_body">The question is:</string>
    <string name="clean_media_cache_txt">Clean media cache -\u0020</string>
    <string name="_0_mb_txt">0 Mb</string>
    <string name="data_txt">Data</string>
    <string name="byte_txt">Bytes</string>
    <string name="kilobyte_txt">kB</string>
    <string name="megabyte_txt">MB</string>
    <string name="gigabyte_txt">GB</string>
    <string name="terabyte_txt">TB</string>
</resources>
