<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_main" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_fiber_new_black_24dp"
            android:title="@string/nav_news" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_date_range_black_24dp"
            android:title="@string/nav_calendar" />
        <item
            android:id="@+id/nav_table"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/nav_table" />
        <item
            android:id="@+id/nav_team"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/nav_team" />
        <item
            android:id="@+id/nav_club"
            android:icon="@drawable/ic_card_membership_black_24dp"
            android:title="@string/nav_club" />
        <item
            android:id="@+id/nav_app"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/nav_app" />
    </group>


</menu>
