<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tournament.TournamentFragment"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp">

    <LinearLayout
        android:id="@+id/tournament_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <TextView
            android:id="@+id/tournament_rv_pos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textSize="18sp"
            android:gravity="start"
            android:textColor="@color/defaultYellow"
            android:textStyle="bold"
            android:layout_weight="1"
            tools:text="1"/>
        <TextView
            android:id="@+id/tournament_rv_team"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/team"
            android:textSize="18sp"
            android:gravity="start"
            android:textColor="@color/defaultYellow"
            android:textStyle="bold"
            android:layout_weight="4"
            tools:text="Динамо Бр"/>
        <TextView
            android:id="@+id/tournament_rv_games"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/games"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/defaultYellow"
            android:textStyle="bold"
            android:layout_weight="1"
            tools:text="11"/>
        <TextView
            android:id="@+id/tournament_rv_diffs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/diffs"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/defaultYellow"
            android:textStyle="bold"
            android:layout_weight="1.5"
            tools:text="26-6"/>
        <TextView
            android:id="@+id/tournament_rv_points"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/points"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/defaultYellow"
            android:textStyle="bold"
            android:layout_weight="1"
            tools:text="29"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tournament_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tournament_title"/>

</RelativeLayout>